--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField 'String', 'APIStory', 'https://story-api.dicoding.dev/'
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
