--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        buildConfigField 'String', 'APIStory', 'https://story-api.dicoding.dev/'
+        buildConfigField 'String', 'APIStory', '"https://story-api.dicoding.dev/"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
